Made some improvements

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -9,6 +9,9 @@
   background-color: inherit !important;
   border: none;
 }
+#navbar .ant-menu-item{
+  border: none;
+}
 #navbar .ant-menu-item:hover{
   border: none;
 }
