--- a/src/components/CategoryList/CategoryList.css
+++ b/src/components/CategoryList/CategoryList.css
@@ -1,11 +1,11 @@
 #categories{
-  padding: 20px;
+  padding: 10px 0 10px 0;
   font-size: 20px;
   font-weight: 800;
   background:#f4f4f4
 }
 #categories .ant-col span{
-  padding: 5px;
+  padding: 15px 5px;
   text-align: center;
 }
 #categories .ant-col span a{
@@ -15,11 +15,21 @@
   transition: all 0.5s;
   padding: 5px;
 }
-#categories .ant-col:hover {
-background: rgba(0, 0, 0, 0.1)
+#categories .ant-col a{
+  padding: 15px 5px;
+  text-align: center;
+  color: gray;
+  padding: 10px 0 10px 0;
+  font-size: 20px;
+  font-weight: 800;
+  background:#f4f4f4
 }
 @media(max-width:390px){
   #categories .ant-col span{
+    padding: 0;
+    font-size: 8px;
+  }
+  #categories .ant-col a {
     padding: 0;
     font-size: 8px;
   }
