--- a/src/components/Tables/Tables.css
+++ b/src/components/Tables/Tables.css
@@ -23,12 +23,14 @@ height: 600px;
     font-size: 15px;
 }
 #tables .descBox{
-    font-size: 20px;
+    font-size: 15px;
     text-transform: capitalize;
     padding: 20px 0 0 0 ;
+    font-weight: 700;
     
 }
 #tables .imageBox img{
-    width: 100px;
-    height: 100px;
+    width: 70px;
+    height: 70px;
+    padding: 5px;
 }
